--- a/Scss/estiloScss.scss
+++ b/Scss/estiloScss.scss
@@ -12,6 +12,7 @@
     color:#ffff;
     text-decoration: none;  
     box-sizing: border-box; 
+    font: 1rem 'Heebo', sans-serif;
 }
 /* Encabezados */
 h1{
@@ -93,10 +94,10 @@ body{
     display: $grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 2%;
-    grid-row-gap: 2%;
+    grid-column-gap: 1%;
+    grid-row-gap: 1%;
     width: $ancho;
-    margin: 4% auto 4% auto;
+    margin: 2% auto;
  img{
      border-radius: 2%;
     width: 100%;
@@ -164,16 +165,20 @@ body{
 }
 
 
-/* Footer */
+/* Footer */           
+.footer{
+    position:static;
+    background-color: #212529;
+    width: 100%;
+}
 
 .redes{
-   @include uno(flex,row, 100%);
+   @include uno(flex,row,100%);
     flex-wrap: nowrap;
     padding: 20px;
     justify-content: center;
     align-items: center ;
-    
-    
+      
     i{
     padding: 10px;
     font-size: 30px; 
@@ -194,26 +199,45 @@ body{
     border-collapse: collapse; 
     position: relative;
     padding: 1%;
-} 
+    
+
+
 th{
     @extend.tabla;
 }
 td{
     @extend.tabla;
-}  
+} 
+
 
 /*Pagi na de Contacto*/
-.opciones{
-    color:#212529;
 }
 .form-control{
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: gray;
     margin: 0 auto;
     width: 50%;
     margin-bottom: 15px;
 }
+
+.opciones{
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color:#212529;
+}
+
 .form-container{
     padding: 2%
     
+}
+.btn-contacto{
+    text-align: center;
+    .buttom{
+        padding: 1%;
+    }
 }
 /* Pagina de Galeria */
 .carousel{
@@ -226,9 +250,30 @@ td{
     margin: 0 auto;
 }
 /* Pagina de conocenos */
-.fluid2{
-    margin:4%
+.conteConocenos{
+    font-size: 20px;
+    margin: 3%;
   }
+  .info2 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 95%;
+    text-align: center;
+    font-size: 20px;
+    line-height: 1.5em;
+    margin: 0 auto; }
+    .info2 p {
+      margin: 2rem;
+      text-align: left; }
+
+.fotosconocenos{
+    width: 95%;
+    margin: 2rem;
+    padding: 1%;
+    border-radius: 4%; 
+}
+
+  
 
 /* Medias Query*/
 @media only screen and (max-width: 600px){
@@ -363,6 +408,9 @@ td{
         justify-content: space-between;
         align-items: center;   
     }
+    .form-control{
+        width: 100%;
+    }
   
 }     
 @media only screen and (min-width: 780px) and (max-width: 992px){
@@ -381,6 +429,10 @@ td{
         text-align: justify;
     }
     }
+    .form-control{
+        width: 100%;
+    }
+  
 }
 @media only screen and (min-width: 992px) {
  
