--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -7,7 +7,7 @@
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   padding-inline-start: 0;
-  font-family: 'Heebo' , sans-serif;
+  font-family: 'Indie Flower', cursive;
   color: #ffff;
   text-decoration: none;
   box-sizing: border-box; }
@@ -15,6 +15,8 @@
 /* Encabezados */
 h1 {
   margin: 0 auto;
+  margin-top: 1%;
+  margin-bottom: 2%;
   text-align: center;
   text-transform: capitalize; }
 
@@ -43,6 +45,7 @@ body {
   padding-right: 3%; }
 
 .navbar {
+  font-size: x-large;
   background-color: #e4c9c4;
   margin-bottom: 5px; }
 
@@ -53,7 +56,9 @@ body {
 
 .navbar-light .navbar-nav .nav-link {
   color: #ffff;
-  padding-right: 5%; }
+  padding-right: 3%;
+  margin: 3px;
+  text-align: right; }
 
 .navbar-nav {
   float: right; }
@@ -87,10 +92,10 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 2%;
-  grid-row-gap: 2%;
+  grid-column-gap: 1%;
+  grid-row-gap: 1%;
   width: 90%;
-  margin: 4% auto 4% auto; }
+  margin: 4% auto; }
   .galeria img {
     border-radius: 8px;
     width: 100%;
@@ -108,7 +113,7 @@ body {
   line-height: 1.5em;
   margin: 0 auto; }
   .info p {
-    margin: 2rem;
+    margin: 2%;
     text-align: left; }
 
 .embarazo {
@@ -132,7 +137,7 @@ body {
 /* imagenes pie de pagina*/
 .imagFondo {
   width: 90%;
-  margin: 2% auto; }
+  margin: 0 auto; }
   .imagFondo img {
     width: 33%;
     padding: 1%;
@@ -143,7 +148,7 @@ body {
 .fotoFondo {
   display: flex;
   flex-direction: row;
-  width: 90%;
+  width: 95%;
   justify-content: space-between;
   margin: 0 auto; }
 
@@ -159,33 +164,38 @@ body {
   flex-direction: row;
   width: 100%;
   flex-wrap: nowrap;
-  padding: 40px;
   justify-content: center;
   align-items: center; }
   .redes i {
     padding: 10px;
     font-size: 30px; }
   .redes span {
-    padding: 15px; }
+    padding: 15px;
+    font-size: 20px; }
   .redes p {
     padding: 15px; }
 
 /*Pagina de Precios*/
 .table {
+  font-size: 27px;
   text-align: center;
   border: 1px solid;
   border-collapse: collapse;
   position: relative;
   padding: 1%;
-  width: 90%;
+  width: 88%;
   margin: 0 auto; }
+  .table dl, .table ol, .table ul {
+    margin-bottom: 0%;
+    padding-left: 0; }
 
 th {
   text-align: center;
   border: 1px solid;
   border-collapse: collapse;
   position: relative;
-  padding: 1%; }
+  padding: 1%;
+  align-items: center; }
 
 td {
   text-align: center;
@@ -194,7 +204,7 @@ td {
   position: relative;
   padding: 1%; }
 
-/*Pagi na de Contacto*/
+/*Pagina de Contacto*/
 .form-container {
   padding: 2%; }
 
@@ -242,13 +252,12 @@ td {
   margin: 0 auto; }
   .conteconocenos p {
     font-size: 20px;
-    margin: 2rem;
+    margin: 2%;
     text-align: justify; }
 
 .infoconocenos {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1;
   grid-template-areas: "embarazo recienNacido institucional";
   width: 90%;
   text-align: center;
@@ -256,8 +265,15 @@ td {
   line-height: 1.5em;
   margin: 0 auto; }
   .infoconocenos p {
-    margin: 2rem;
-    text-align: left; }
+    margin: 2%;
+    text-align: justify; }
+
+.fotoFondoconocenos {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  margin: 0 auto; }
 
 /* Medias Query*/
 @media only screen and (max-width: 600px) {
@@ -304,7 +320,7 @@ td {
     justify-content: center;
     align-items: center; }
     .fotoFondo img {
-      width: 80%;
+      width: 90%;
       border-radius: 10px; }
   .redes {
     display: flex;
@@ -322,11 +338,11 @@ td {
   /*Pagina Tablas*/
   .table {
     margin: 0 auto;
-    width: 80%;
-    font-size: 11px; }
+    width: 78%;
+    font-size: 14px; }
   /*Pagina Contacto*/
   form {
-    font-size: 16px; }
+    font-size: 14px; }
   .form-control {
     width: 100%; }
   .form-group {
@@ -334,31 +350,32 @@ td {
   /* Pagina Conocenos*/
   .conteconocenos {
     width: 80%;
-    margin: auto; }
+    margin: 0 auto; }
     .conteconocenos p {
-      margin: 1rem;
+      font-size: 14px;
+      margin: 0 auto;
       text-align: justify;
-      font-size: 13px;
-      line-height: 2.5em; }
+      font-size: 14px;
+      line-height: 1.5em; }
   .infoconocenos {
+    font-size: 14px;
     display: flex;
     flex-direction: column;
     width: 80%;
     text-align: justify;
     line-height: 1.5em; }
     .infoconocenos p {
-      margin: 1rem;
+      margin: 2% auto;
       text-align: justify; }
   .fotoFondoconocenos {
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 100%;
     justify-content: center;
-    align-items: center;
-    margin: 0 auto; }
+    align-items: center; }
     .fotoFondoconocenos img {
-      width: 95%;
-      border-radius: 5px; } }
+      width: 90%;
+      border-radius: 10px; } }
 
 @media only screen and (min-width: 600px) and (max-width: 780px) {
   .galeria {
@@ -392,16 +409,19 @@ td {
     display: flex;
     flex-direction: column;
     width: 95%;
-    justify-content: space-between;
     align-items: center; }
   .fotoFondoconocenos {
     display: flex;
     flex-direction: column;
-    width: 95%;
-    justify-content: space-between;
+    width: 90%;
+    justify-content: center;
     align-items: center; }
     .fotoFondoconocenos img {
-      width: 95%; } }
+      width: 95%;
+      border-radius: 10px; }
+  .table {
+    width: 75%;
+    font-size: 16px; } }
 
 @media only screen and (min-width: 780px) and (max-width: 992px) {
   .info {
