--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -7,7 +7,7 @@
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   padding-inline-start: 0;
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Oswald', sans-serif;
   color: #ffff;
   text-decoration: none;
   box-sizing: border-box; }
@@ -252,7 +252,6 @@ td {
   margin: 0 auto; }
   .conteconocenos p {
     font-size: 20px;
-    margin: 2%;
     text-align: justify; }
 
 .infoconocenos {
