--- a/Scss/estiloScss.scss
+++ b/Scss/estiloScss.scss
@@ -8,7 +8,7 @@
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     padding-inline-start:0;
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Oswald', sans-serif;
     color:#ffff;
     text-decoration: none;  
     box-sizing: border-box; 
@@ -267,7 +267,6 @@ td{
     margin: 0 auto;
     p { 
         font-size: 20px;
-        margin: 2%;
         text-align: justify;
     }
 }
